ensure that stats are 1) opaque and 2) accurate on mobile

--- a/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
@@ -267,16 +267,15 @@ p span.label {
     animation-delay: 1s;
   }
 }
+// @include respond(tab-port) {
+//   .bigstat {
+//     animation-delay: 2s;
+//   }
 
-@include respond(tab-port) {
-  .bigstat {
-    animation-delay: 2s;
-  }
-
-  .fade-elem,
-  .bigstat {
-    -webkit-animation: fadeIn 1s linear forwards;
-    animation: fadeIn 1s linear forwards;
-    animation-delay: 1s;
-  }
-}
+//   .fade-elem,
+//   .bigstat {
+//     -webkit-animation: fadeIn 1s linear forwards;
+//     animation: fadeIn 1s linear forwards;
+//     animation-delay: 1s;
+//   }
+// }
